--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -8,11 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@wwdrew/react-native-numeric-textinput": "^1.1.0",
     "expo": "~36.0.0",
+    "mem": "^6.0.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-numeric-input": "^2.2.3"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
