--- a/mobile13/package.json
+++ b/mobile13/package.json
@@ -8,22 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.5",
-    "@react-navigation/native": "^5.1.4",
     "@wwdrew/react-native-numeric-textinput": "^1.1.0",
     "expo": "~36.0.0",
-    "firebase": "^7.14.2",
+    "expo-sqlite": "~8.0.0",
     "mem": "^6.0.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-gesture-handler": "^1.5.6",
-    "react-native-reanimated": "^1.4.0",
-    "react-native-safe-area-context": "^0.6.0",
-    "react-native-screens": "^2.0.0-alpha.12",
+    "react-native-elements": "^2.0.0",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.3.7",
-    "react-navigation-tabs": "^2.8.11",
     "react-numeric-input": "^2.2.3"
   },
   "devDependencies": {
